--- a/db2-postgres-pipeline/.env
+++ b/db2-postgres-pipeline/.env
@@ -7,6 +7,13 @@ PG_DATABASE=bankdb
 PG_USER=postgres
 PG_PASSWORD=postgres
 
+# PostgreSQL Configuration
+# PG_HOST=172.10.5.23
+# PG_PORT=5432
+# PG_DATABASE=rtsis
+# PG_USER=dv_mcb
+# PG_PASSWORD=MCB@123
+
 # DB2 Configuration (for ibm_db)
 DB2_HOST=172.10.2.42
 DB2_PORT=50000
