--- a/db2-postgres-pipeline/.env
+++ b/db2-postgres-pipeline/.env
@@ -1,13 +1,13 @@
 # DB2 to PostgreSQL Cash Pipeline Configuration
 
-# PostgreSQL Configuration
+# PostgreSQL Configuration - Local
 PG_HOST=localhost
 PG_PORT=5432
 PG_DATABASE=bankdb
 PG_USER=postgres
 PG_PASSWORD=postgres
 
-# PostgreSQL Configuration
+# PostgreSQL Configuration - Production
 # PG_HOST=172.10.5.23
 # PG_PORT=5432
 # PG_DATABASE=rtsis
